--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "plugins"]
 	path = plugins
-	url = git@github.com:creativestyle/jquery-plugins.git
+	url = https://github.com/creativestyle/jquery-plugins.git
